# system_media

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: system_media.yaml
examples/: basic.rs  tmp.rs
src/: lib.rs
src/macos/: mod.rs  nowplaying.swift
src/null/: mod.rs
src/windows/: smtc.cs
