[package]
name = "system_media"
version = "0.1.0"
edition = "2024"

authors = ["William Gibbs <wgibbs08@outlook.com>"]
description = "Rust crate for interacting with the NowPlaying API"
license = "MIT"
repository = "https://github.com/wgibbs-rs/system_media"
readme = "README.md"
keywords = ["rust", "swift", "nowplaying", "macos", "audio", "video"]
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::video"]
