[package]
name = "system-media"
version = "0.1.0"
edition = "2024"

authors = ["William Gibbs <wgibbs08@outlook.com>"]
description = "Rust crate for interacting with the NowPlaying API"
license = "MIT"
repository = "https://github.com/RustAudio/system-media"
readme = "README.md"
keywords = ["rust", "swift", "macos", "audio", "video"]
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::video"]

[dependencies]
image = "0.25.6"
